tests/sumo/pedestrian_model/striping/errors/disconnected_route_ignore/errors.sumo
Warning: Person 'p0' could not find route across junction 'C' from walkingArea ':C_w1' to edge 'CW', time=8.00.
